Fix overflow in chrome

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: sans-serif;
   min-width: 250px;
   background: linear-gradient(to bottom, #264371, #152a4b);
-  overflow: scroll;
+  overflow: none;
 }
 
 * {
